{
  "version": 4,
  "terraform_version": "1.15.0",
  "serial": 13,
  "lineage": "9bc61f03-d503-c63b-0b6c-31dcc614467a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:internet-gateway/igw-02d23261d69d797ed",
            "id": "igw-02d23261d69d797ed",
            "owner_id": "311601424765",
            "region": "ap-south-1",
            "vpc_id": "vpc-00196e5879fe65d4c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:route-table/rtb-08083477e7331c4e0",
            "id": "rtb-08083477e7331c4e0",
            "owner_id": "311601424765",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02d23261d69d797ed",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mypubroute"
            },
            "tags_all": {
              "Name": "mypubroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-00196e5879fe65d4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "rtb-08083477e7331c4e0",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pvtroutetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:route-table/rtb-09b906cab908f1e24",
            "id": "rtb-09b906cab908f1e24",
            "owner_id": "311601424765",
            "propagating_vgws": [],
            "region": "ap-south-1",
            "route": [],
            "tags": {
              "Name": "mypvtroute"
            },
            "tags_all": {
              "Name": "mypvtroute"
            },
            "timeouts": null,
            "vpc_id": "vpc-00196e5879fe65d4c"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "rtb-09b906cab908f1e24",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubsubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ad7187f1c7ba65e",
            "region": "ap-south-1",
            "route_table_id": "rtb-08083477e7331c4e0",
            "subnet_id": "subnet-099b9fe2068482901"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubroutetable",
            "aws_subnet.pubsub",
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e17c2cd4cacb111",
            "region": "ap-south-1",
            "route_table_id": "rtb-08083477e7331c4e0",
            "subnet_id": "subnet-0a27ba245b5a6d059"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.pubroutetable",
            "aws_subnet.pubsub",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pvtsubroute",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a04f9adbec5273ec",
            "region": "ap-south-1",
            "route_table_id": "rtb-09b906cab908f1e24",
            "subnet_id": "subnet-0481112e5be00ea45"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvtroutetable",
            "aws_subnet.pvtsub",
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b7e1c4e5682ba36",
            "region": "ap-south-1",
            "route_table_id": "rtb-09b906cab908f1e24",
            "subnet_id": "subnet-00560ebe9b2c64580"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.pvtroutetable",
            "aws_subnet.pvtsub",
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pubsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-099b9fe2068482901",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "198.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099b9fe2068482901",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prodpubsub1"
            },
            "tags_all": {
              "Name": "prodpubsub1"
            },
            "vpc_id": "vpc-00196e5879fe65d4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-099b9fe2068482901",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-0a27ba245b5a6d059",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "198.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a27ba245b5a6d059",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prodpubsub2"
            },
            "tags_all": {
              "Name": "prodpubsub2"
            },
            "vpc_id": "vpc-00196e5879fe65d4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-0a27ba245b5a6d059",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pvtsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-0481112e5be00ea45",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "198.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0481112e5be00ea45",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prodpvtsub1"
            },
            "tags_all": {
              "Name": "prodpvtsub1"
            },
            "vpc_id": "vpc-00196e5879fe65d4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-0481112e5be00ea45",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:subnet/subnet-00560ebe9b2c64580",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "198.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00560ebe9b2c64580",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "311601424765",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-south-1",
            "tags": {
              "Name": "prodpvtsub2"
            },
            "tags_all": {
              "Name": "prodpvtsub2"
            },
            "vpc_id": "vpc-00196e5879fe65d4c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "subnet-00560ebe9b2c64580",
            "region": "ap-south-1"
          },
          "dependencies": [
            "aws_vpc.awsvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "awsvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:311601424765:vpc/vpc-00196e5879fe65d4c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "198.168.0.0/16",
            "default_network_acl_id": "acl-0a1c18f58864ce1b2",
            "default_route_table_id": "rtb-0f54e4aa7ec227794",
            "default_security_group_id": "sg-02f72c3bdca2e2213",
            "dhcp_options_id": "dopt-02863d9383cfda150",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00196e5879fe65d4c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f54e4aa7ec227794",
            "owner_id": "311601424765",
            "region": "ap-south-1",
            "tags": {
              "Name": "prodmyvpc"
            },
            "tags_all": {
              "Name": "prodmyvpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "311601424765",
            "id": "vpc-00196e5879fe65d4c",
            "region": "ap-south-1"
          }
        }
      ]
    }
  ]
}